--- a/linhagem.html
+++ b/linhagem.html
@@ -63,15 +63,47 @@
         <section>
             <h1 class="titulo-impacto">História</h1>
             <h2>A Linhagem da SZABJJ</h2>
-            <img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758647278/3_avjdap.jpg" alt="Foto da Linhagem de Mestre Oswaldo Fadda" style="max-width: 100%; height: auto; margin-bottom: 1rem;" width="800" height="600" loading="lazy">
-            <p>A história do Jiu-Jitsu Brasileiro é marcada por diferentes personagens que ajudaram a moldar e expandir essa arte marcial no país.</p>
-            <p>Em 1908, o Japão enviou mestres ao Brasil, entre eles Sada Miyako, que realizou a primeira demonstração pública de Jiu-Jitsu, e alguns anos depois Mitsuyo Maeda, o Conde Koma, que se tornou o maior difusor da arte. Maeda ficou famoso pelos inúmeros desafios vencidos, que mostravam a eficácia do Jiu-Jitsu. Entre seus discípulos estavam os Gracie, que popularizaram o Jiu-Jitsu entre a elite carioca, mas também outros alunos que seguiram caminhos diferentes.</p>
-            <p>Um desses alunos foi Luiz França, que aprendeu diretamente com Maeda e levou o Jiu-Jitsu para além do círculo dos Gracie. França ensinava tanto nas Forças Armadas quanto para pessoas comuns, ajudando a espalhar a arte de forma independente.</p>
-            <p>Seu principal discípulo foi Mestre Oswaldo Fadda, que desempenhou um papel fundamental na democratização do Jiu-Jitsu. Enquanto a família Gracie focava em academias voltadas para a elite, Fadda abriu espaço para os mais humildes. Em seu bairro, Bento Ribeiro, na Zona Norte do Rio de Janeiro, ele ensinava gratuitamente para crianças e jovens carentes, tornando-se um verdadeiro símbolo de inclusão social. Nos anos 1951, sua academia ganhou destaque nacional ao desafiar e vencer a equipe Gracie, provando que o Jiu-Jitsu não era exclusividade de uma única família.</p>
+<img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758647278/3_avjdap.jpg" alt="Foto da Linhagem de Mestre Oswaldo Fadda" style="max-width: 100%; height: auto; margin-bottom: 1rem;" width="800" height="600" loading="lazy">
+<p> <a href="https://pt.wikipedia.org/wiki/Oswaldo_Fadda" 
+                       target="_blank" 
+                       rel="noopener noreferrer"
+                       class="link-beneficios-infantil">
+                        Conheça Oswaldo Fadda: se não por ele, o BJJ não seria acessível a todos
+                    </a></p>
+<p>A história do Jiu-Jitsu Brasileiro é marcada por diferentes personagens que ajudaram a moldar e expandir essa arte marcial no país.</p>
+            <p>Em 1908, o Japão enviou mestres ao Brasil, entre eles<a href="https://en.wikipedia.org/wiki/Sada_Miyako" 
+                       target="_blank" 
+                       rel="noopener noreferrer"
+                       class="link-beneficios-infantil">
+                        Sada Miyako
+                    </a>, que realizou a primeira demonstração pública de Jiu-Jitsu, e alguns anos depois <a href="https://pt.wikipedia.org/wiki/Mitsuyo_Maeda" 
+                       target="_blank" 
+                       rel="noopener noreferrer"
+                       class="link-beneficios-infantil">
+                        Mitsuyo Maeda 
+                    </a>, o Conde Koma, que se tornou o maior difusor da arte. Maeda ficou famoso pelos inúmeros desafios vencidos, que mostravam a eficácia do Jiu-Jitsu. Entre seus discípulos estavam os Gracie, que popularizaram o Jiu-Jitsu entre a elite carioca, mas também outros alunos que seguiram caminhos diferentes.</p>
+            <p>Um desses alunos foi <a href="https://pt.wikipedia.org/wiki/Luiz_Fran%C3%A7a_(mestre_de_jiu-jitsu)" 
+                       target="_blank" 
+                       rel="noopener noreferrer"
+                       class="link-beneficios-infantil">
+                        Luiz França 
+                    </a>, que aprendeu diretamente com Maeda e levou o Jiu-Jitsu para além do círculo dos Gracie. França ensinava tanto nas Forças Armadas quanto para pessoas comuns, ajudando a espalhar a arte de forma independente.</p>
+            <p>Seu principal discípulo foi <a href="https://pt.wikipedia.org/wiki/Oswaldo_Fadda" 
+                       target="_blank" 
+                       rel="noopener noreferrer"
+                       class="link-beneficios-infantil">
+                        Mestre Oswaldo Fadda
+                    </a>, que desempenhou um papel fundamental na democratização do Jiu-Jitsu. Enquanto a família Gracie focava em academias voltadas para a elite, Fadda abriu espaço para os mais humildes. Em seu bairro, Bento Ribeiro, na Zona Norte do Rio de Janeiro, ele ensinava gratuitamente para crianças e jovens carentes, tornando-se um verdadeiro símbolo de inclusão social. Nos anos 1951, sua academia ganhou destaque nacional ao desafiar e vencer a equipe Gracie, provando que o Jiu-Jitsu não era exclusividade de uma única família.</p>
             <p>Graças a Luiz França e Oswaldo Fadda, o Jiu-Jitsu ganhou um caráter popular, democrático e acessível, espalhando-se por diferentes regiões e se consolidando como uma das maiores artes marciais do mundo.</p>
-            <p>Dentro dessa tradição estão os atuais representantes da SZABJJ (Souza Jiu-Jitsu Brasileiro), os mestres Eduardo Souza e Mara Souza, ambos graduados pelas mãos do próprio Mestre Oswaldo Fadda. A equipe nasceu com o compromisso de manter vivos os valores transmitidos por essa linhagem: respeito, técnica e família.</p>
-            <p>Hoje, a SZABJJ continua expandindo esse legado, levando o Jiu-Jitsu para novas gerações e honrando a memória de todos que ajudaram a construir essa arte no Brasil.</p>
+            <p>Dentro dessa tradição estão os atuais representantes da <a href="https://www.google.com/search?q=ct+sza+bjj&sca_esv=219388647f983b16&sxsrf=AE3TifMoAhrHRrRFbiAOdQeiMiFK-M0kUA%3A1759160990950&udm=50&fbs=AIIjpHydJdUtNKrM02hj0s4nbm4yAFb4PvhjIUcDtaFHkK_tyspyDJg0-Y4Ji8bGEtEDNJGPYR40HYWsbK7HyDMH1XbgsIEBuX2ZRVnpzXw_5CbKOxLYM8-CAob4yOhp_vTxQaQPHgERzuvYl8AYdoo3VaxYixWXzqwjnK2doVUy3_bfBu1N8SVPx2B17RD4xv_iv7lz-RD-lL-l8lJ9UrBRfCbzJEjeuw&aep=1&ntc=1&sa=X&ved=2ahUKEwjGoN-vqf6PAxW6L1kFHaJbD2YQ2J8OegQIBhAE&biw=1600&bih=739&dpr=1&mstk=AUtExfCgT6OVJU5XJgx86JlEWh7_4RrMxaMBwd_Ev2X2nBQBCGqwLonEuq6eTorqs59nSitXvVVcBQi8KblG9dQ8UVxBoubq0Q86mLwx3mtpuaMncinca5zfSCfrqVfMQRvSsrgxn1V7R4ae2VIhO13LiYI-hiXLscqqd-E7BUfqbaLk2DS75nLHE6r45hj3sAPVjeIClYtZNfMwq-I-LskNX-oFzQmUvoanN36qrIf520Ao4Ztzgkaw4IRXQZDu0sIGqC_E5CxGnAqbQ3mD4n_4H2InHdqIlF2vqXX2gil5Cb147lADU79bzgjKtKS7LYW5owOjW1g7ve2iSg&csuir=1&mtid=oqraaLCIFs6q5NoP7Jib2Qc" 
+                       target="_blank" 
+                       rel="noopener noreferrer"
+                       class="link-beneficios-infantil">
+                        SZABJJ
+                    </a> (Souza Jiu-Jitsu Brasileiro), os <a href="blog.html#mestre-eduardo-origem" class="link-beneficios-infantil">mestres Eduardo Souza</a> e <a href="blog.html#entrevista-mara" class="link-beneficios-infantil">mestres Mara Souza</a>, ambos <a href="blog.html#linhagem-fadda-szabjj" class="link-beneficios-infantil">graduados pelas mãos do próprio Mestre Oswaldo Fadda.</a> A equipe nasceu com o compromisso de manter vivos os valores transmitidos por essa linhagem: respeito, técnica e família.</p>
+            <p>Hoje, a SZABJJ segue expandindo esse legado, levando o Jiu-Jitsu para novas gerações através dos filhos <a href="blog.html#perfil-dudu" class="link-beneficios-infantil">Dudu Souza</a> e Guilherme Souza. As netas já trilham os mesmos passos no tatame, honrando a memória de todos que contribuíram para a construção e fortalecimento dessa arte no Brasil.</p>
             <img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758636079/Linhagem_1_tqqvux.jpg" alt="Foto dos Mestres Eduardo e Mara Souza" style="max-width: 100%; height: auto; margin-bottom: 1rem;" width="800" height="600" loading="lazy">
+
         </section>
     </main>
 
