--- a/turmas.html
+++ b/turmas.html
@@ -92,6 +92,9 @@
                         </tr>
                     </tbody>
                 </table>
+<p>
+<a href="blog.html#didatica-fusao" class="link-beneficios-infantil">Conheça nosso estilo de luta</a>
+</p>
             </div>
             <div class="cta-box">
                 <h3>Agende sua Aula Experimental Gratuita!</h3>
