--- a/blog.html
+++ b/blog.html
@@ -369,7 +369,7 @@
 
     <h3>A Inovação: A Explosão e a Criatividade do New School</h3>
     
-    <p>Os professores faixas pretas trazem a energia e a inovação da "Nova Escola", garantindo que nossos alunos permaneçam competitivos e modernos. O **Jiu-Jitsu New School** é o toque de modernidade que adapta a Arte Suave aos cenários atuais:</p>
+    <p>Os professores faixas pretas trazem a energia e a inovação da "Nova Escola", garantindo que nossos alunos permaneçam competitivos e modernos. O Jiu-Jitsu New School é o toque de modernidade que adapta a Arte Suave aos cenários atuais:</p>
     <ul>
         <li>Inovação e Competição: Introduzimos as técnicas de ponta que dominam os campeonatos de alto nível, como as inversões, o famoso berimbolo e outros movimentos que exigem explosão e criatividade.</li>
         <li>Jogo Completo e Adaptado: O objetivo é ensinar a criar um jogo mais adaptável a qualquer adversário ou situação de torneio, incorporando movimentos que, embora modernos, nascem de uma base sólida do Old School.</li>
