--- a/apadrinhe.html
+++ b/apadrinhe.html
@@ -20,6 +20,13 @@
 
     <meta name="description" content="Apadrinhe um campeão de Jiu-Jitsu da equipe SZABJJ em Nilópolis. Contribua para que jovens atletas possam competir e alcançar seus sonhos.">
 
+    <meta property="og:title" content="Apadrinhe um Campeão – SZABJJ Nilópolis" />
+    <meta property="og:description" content="Apadrinhe um campeão de Jiu-Jitsu da equipe SZABJJ em Nilópolis. Contribua para que jovens atletas possam competir e alcançar seus sonhos." />
+    <meta property="og:image" content="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1759264988/1759264918614_xnchpn.png" />
+    <meta property="og:url" content="https://d09u05d92u-oss.github.io/szabjj/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image">
+    
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 
