--- a/avaliacoes.html
+++ b/avaliacoes.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description" content="Leia as avaliações e comentários dos alunos e pais sobre a escola de jiu-jitsu SZABJJ Nilópolis. Deixe sua opinião!">
+
+    <meta property="og:title" content="Avaliações – SZABJJ Nilópolis" />
+    <meta property="og:description" content="Leia as avaliações e comentários dos alunos e pais sobre a escola de jiu-jitsu SZABJJ Nilópolis. Deixe sua opinião!" />
+    <meta property="og:image" content="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1759264988/1759264932947_puexnc.png" />
+    <meta property="og:url" content="https://d09u05d92u-oss.github.io/szabjj/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image">
     
     <link rel="preload" href="style.css" as="style">
     <link rel="preload" href="script.js" as="script">
