Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <meta property="og:title" content="CT SZA JIU JITSU - NILÓPOLIS | 40 Anos de Tradição" />
     <meta property="og:description" content="Aprenda Jiu Jitsu com a familía introdutora da arte em nilopolis, Visite nosso site e saiba mais sobre nossa história, disciplina e respeito." />
-    <meta property="og:image" content="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1759259289/1759258553588_zazjxw.png" />
+    <meta property="og:image" content="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1759270679/20250930_191620_yuryiw.jpg" />
     <meta property="og:url" content="https://d09u05d92u-oss.github.io/szabjj/" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image">
