--- a/estudo.html
+++ b/estudo.html
@@ -7,6 +7,14 @@
 
     <meta name="description" content="Teste seus conhecimentos sobre a história e os princípios do Jiu-Jitsu com nosso quiz exclusivo. Uma forma divertida de aprender mais sobre a arte suave.">
 
+    <meta property="og:title" content="Estudo – SZABJJ Nilópolis" />
+    <meta property="og:description" content="Teste seus conhecimentos sobre a história e os princípios do Jiu-Jitsu com nosso quiz exclusivo. Uma forma divertida de aprender mais sobre a arte suave." />
+    <meta property="og:image" content="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1759271841/20250930_193435_y8o3lh.jpg" />
+    <meta property="og:url" content="https://d09u05d92u-oss.github.io/szabjj/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="stylesheet" href="style.css">
+    
     <link rel="preload" href="style.css" as="style">
     <link rel="preload" href="script.js" as="script">
     <link rel="preconnect" href="https://d09u05d92u-oss.github.io">
