--- a/linhagem.html
+++ b/linhagem.html
@@ -23,6 +23,14 @@
     <link rel="icon" href="favicon-192x192.png" type="image/png" sizes="192x192">
     <link rel="icon" href="favicon-512x512.png" type="image/png" sizes="512x512">
 
+
+    <meta property="og:title" content="CT SZA JIU JITSU - NILÓPOLIS | 40 Anos de Tradição" />
+    <meta property="og:description" content="Descubra a rica linhagem do Jiu-Jitsu Brasileiro e a história da SZABJJ Nilópolis, desde Mestre Oswaldo Fadda até os dias atuais. Conheça nossos mestres Eduardo Souza e Mara Souza." />
+    <meta property="og:image" content="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1759271841/20250930_193435_y8o3lh.jpg" />
+    <meta property="og:url" content="https://d09u05d92u-oss.github.io/szabjj/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image">
+
     <link rel="stylesheet" href="style.css">
 
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
