Modify meta tags for SEO and social sharing
Updated the description meta tag and added Open Graph meta tags.

--- a/como-chegar.html
+++ b/como-chegar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Saiba como chegar à academia SZABJJ Nilópolis. Encontre nossa localização e trace sua rota via Google Maps ou Uber para começar suas aulas de jiu-jitsu.">
+    <meta name="description" content="Encontre nossa localização e trace sua rota via Google Maps ou Uber para começar suas aulas de jiu-jitsu.">
 
     <link rel="preload" href="style.css" as="style">
     <link rel="preload" href="script.js" as="script">
@@ -21,6 +21,13 @@
     <link rel="icon" href="favicon-192x192.png" type="image/png" sizes="192x192">
     <link rel="icon" href="favicon-512x512.png" type="image/png" sizes="512x512">
 
+    <meta property="og:title" content="CT SZA JIU JITSU - NILÓPOLIS | 40 Anos de Tradição" />
+    <meta property="og:description" content="Encontre nossa localização e trace sua rota via Google Maps ou Uber para começar suas aulas de jiu-jitsu." />
+    <meta property="og:image" content="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1759271841/20250930_193435_y8o3lh.jpg" />
+    <meta property="og:url" content="https://d09u05d92u-oss.github.io/szabjj/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image">
+    
     <link rel="stylesheet" href="style.css">
 
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
