--- a/bolsista.html
+++ b/bolsista.html
@@ -19,6 +19,14 @@
     <link rel="preload" href="script.js" as="script">
     
     <title>Bolsistas – SZABJJ Nilópolis</title>
+
+        <meta property="og:title" content="CT SZA JIU JITSU - NILÓPOLIS | 40 Anos de Tradição" />
+    <meta property="og:description" content="Programa de Bolsistas SZABJJ Nilópolis: Oportunidades para praticantes de Jiu-Jitsu com disponibilidade de horários. Saiba como se tornar um bolsista e transformar sua paixão em desenvolvimento." />
+    <meta property="og:image" content="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1759271841/20250930_193435_y8o3lh.jpg" />
+    <meta property="og:url" content="https://d09u05d92u-oss.github.io/szabjj/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image">
+    
     <link rel="stylesheet" href="style.css">
 
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
