--- a/apadrinhe.html
+++ b/apadrinhe.html
@@ -17,7 +17,7 @@
     <link rel="preload" href="script.js" as="script">
 
     <meta property="og:title" content="CT SZA JIU JITSU - NILÓPOLIS | 40 Anos de Tradição" />
-    <meta property="og:description" content="Ajude um campeão com suas dispesas de campeonato" />
+    <meta property="og:description" content="Apadrinhe um campeão de Jiu-Jitsu da equipe SZABJJ em Nilópolis. Contribua para que jovens atletas possam competir e alcançar seus sonhos." />
     <meta property="og:image" content="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1759271841/20250930_193435_y8o3lh.jpg" />
     <meta property="og:url" content="https://d09u05d92u-oss.github.io/szabjj/" />
     <meta property="og:type" content="website" />
