Update link text for methodology section

--- a/turmas.html
+++ b/turmas.html
@@ -100,7 +100,7 @@
                     </tbody>
                 </table>
 <p>
-<a href="blog.html#didatica-fusao" class="link-beneficios-infantil">Conheça nosso estilo de luta</a>
+<a href="blog.html#didatica-fusao" class="link-beneficios-infantil">Conheça nossa Metodologia </a>
 </p>
             </div>
             <div class="cta-box">
