Update Open Graph title meta tag

--- a/equipe.html
+++ b/equipe.html
@@ -26,7 +26,7 @@
     <link rel="icon" href="favicon-192x192.png" type="image/png" sizes="192x192">
     <link rel="icon" href="favicon-512x512.png" type="image/png" sizes="512x512">
 
-    <meta property="og:title" content="CT SZA JIU JITSU - NILÓPOLIS | 40 Anos de Tradição" />
+    <meta property="og:title" content="Sobre a SZA BJJ – CT SZA JIU JITSU - NILÓPOLIS | 40 Anos de Tradição" />
     <meta property="og:description" content="Conheça a história da equipe SZABJJ Nilópolis, liderada pelo Mestre Eduardo Souza. Descubra a tradição familiar e o impacto social do Jiu-Jitsu na cidade." />
     <meta property="og:image" content="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1759271841/20250930_193435_y8o3lh.jpg" />
     <meta property="og:url" content="https://d09u05d92u-oss.github.io/szabjj/" />
