--- a/estudo.html
+++ b/estudo.html
@@ -29,7 +29,7 @@
     <link rel="icon" href="favicon-192x192.png" type="image/png" sizes="192x192">
     <link rel="icon" href="favicon-512x512.png" type="image/png" sizes="512x512">
 
-    <meta property="og:title" content="CT SZA JIU JITSU - NILÓPOLIS | 40 Anos de Tradição" />
+    <meta property="og:title" content="Estudo – CT SZA JIU JITSU - NILÓPOLIS | 40 Anos de Tradição" />
     <meta property="og:description" content="Teste seus conhecimentos sobre a história e os princípios do Jiu-Jitsu com nosso quiz exclusivo. Uma forma divertida de aprender mais sobre a arte suave." />
     <meta property="og:image" content="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1759271841/20250930_193435_y8o3lh.jpg" />
     <meta property="og:url" content="https://d09u05d92u-oss.github.io/szabjj/" />
