Update slideshow images in galeria.html

--- a/galeria.html
+++ b/galeria.html
@@ -73,16 +73,16 @@
 
             <h3 style="padding: 0 1rem;">Treinos</h3>
             <div class="slideshow">
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755384140/2022-01-23_hafrmt.webp" alt="Foto de treino 21" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755385976/20250801_195032_osrs9j.jpg" alt="Foto de treino 14" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755385976/20250728_193826_n1tedc.jpg" alt="Foto de treino 15" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755385976/20250728_211715_rooyc2.jpg" alt="Foto de treino 16" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755385976/20250711_010942_pkyhri.jpg" alt="Foto de treino 17" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755385891/20250710_211505_idiaos.jpg" alt="Foto de treino 19" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755385890/20250710_211436_ihc7bg.jpg" alt="Foto de treino 20" width="600" height="400" loading="lazy"></div>
-                <div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755433885/120673385_1615405948666534_8475698595516265887_n._uaezgf.jpg" alt="Foto de treino 1" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755433877/280265291_5098034803606669_63873700915275851_n..webp_ofjmbd.jpg" alt="Foto de treino 3" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755433877/286791715_744327833670004_2909812155234222469_n..webp_hf9fzm.jpg" alt="Foto de treino 4" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758829028/2022-01-23_ksphor.webp" alt="Foto de treino 21" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758829001/20250710_211505_rrdtzc.jpg" alt="Foto de treino 14" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758829004/20250728_193826_xrlb7y.jpg" alt="Foto de treino 15" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758828998/IMG-20250525-WA0024_c4mpmh.jpg" alt="Foto de treino 16" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758650994/161785468_2947820222209790_4748753996785883104_n._lmv4az.jpg" alt="Foto de treino 17" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758828999/IMG-20250525-WA0018_efjcez.jpg" alt="Foto de treino 19" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758829031/20250814_204202_fgre7a.jpg" alt="Foto de treino 20" width="600" height="400" loading="lazy"></div>
+                <div class="slide active"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758829035/272951841_531037604939531_7815518836413264250_n..webp_brfmgj.jpg" alt="Foto de treino 1" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758829033/286791715_744327833670004_2909812155234222469_n..webp_sthxcz.jpg" alt="Foto de treino 3" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758829031/419329308_702984368481909_9031988343870171369_n..webp_oke5cq.jpg" alt="Foto de treino 4" width="600" height="400" loading="lazy"></div>
                 <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755433871/272951841_531037604939531_7815518836413264250_n..webp_nd0wkg.jpg" alt="Foto de treino 5" width="600" height="400" loading="lazy"></div>
                 <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755433871/278559837_317116503837093_7496238188844684190_n..webp_zkn6nd.jpg" alt="Foto de treino 6" width="600" height="400" loading="lazy"></div>
                 <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755433871/277698247_460292069216428_6237158563134152345_n..webp_kpx7ct.jpg" alt="Foto de treino 7" width="600" height="400" loading="lazy"></div>
