--- a/galeria.html
+++ b/galeria.html
@@ -113,19 +113,21 @@
 
             <h3 style="padding: 0 1rem;"></h3>
             <div class="slideshow">
-                <div class="slide"><iframe src="https://www.youtube.com/embed/lFKb-ypiVIc" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 1"></iframe></div>
-                <div class="slide"><iframe src="https://www.youtube.com/embed/bRt89TqhgQE" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 2"></iframe></div>
-                <div class="slide"><iframe src="https://www.youtube.com/embed/oysltsf5fyI" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 3"></iframe></div>
-                <div class="slide"><iframe src="https://www.youtube.com/embed/M31FfErCU5s" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 4"></iframe></div>
+                
             </div>
 
             <h3 style="padding: 0 1rem;">Inclusão Social</h3>
-            <div class="slideshow">
-                <div class="slide"><iframe src="https://www.youtube.com/embed/KILemx1YIiY" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de inclusão social 1"></iframe></div>
-                <div class="slide"><iframe src="https://www.youtube.com/embed/ttEe-vGW2lU" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de inclusão social 2"></iframe></div>
-                <div class="slide"><iframe src="https://www.youtube.com/embed/4rMb1xCnEUY" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de inclusão social 3"></iframe></div>
-                <div class="slide"><iframe src="https://www.youtube.com/embed/8pomCxzsTp8" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de inclusão social 4"></iframe></div>
-                <div class="slide"><iframe src="https://www.youtube.com/embed/yYaZMu9pxWg" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de inclusão social 5"></iframe></div>
+<div class="slideshow">
+                <div class="slide"><iframe src="https://www.youtube.com/embed/SSig5V9dWi8" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 1"></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/STQGZFgEvKQ" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 2"></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/iIh03kvKbrs" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 3"></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/lFKb-ypiVIc" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 4"></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/bRt89TqhgQE" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 4"></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/vkJ65_aZVM8" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 4"></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/IeiwLYKRbuU" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 4"></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/xSA4xqCFE40" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 4"></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/oysltsf5fyI" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 4"></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/M31FfErCU5s" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 4"></iframe></div>
             </div>
 
             <h3 style="padding: 0 1rem;"></h3>
