Update video sections and images in galeria.html

--- a/galeria.html
+++ b/galeria.html
@@ -116,7 +116,7 @@
                 
             </div>
 
-            <h3 style="padding: 0 1rem;">Inclusão Social</h3>
+            <h3 style="padding: 0 1rem;">Videos Campeonato</h3>
 <div class="slideshow">
                 <div class="slide"><iframe src="https://www.youtube.com/embed/SSig5V9dWi8" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 1"></iframe></div>
                 <div class="slide"><iframe src="https://www.youtube.com/embed/STQGZFgEvKQ" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 2"></iframe></div>
@@ -130,17 +130,23 @@
                 <div class="slide"><iframe src="https://www.youtube.com/embed/M31FfErCU5s" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de competição de jiu-jitsu 4"></iframe></div>
             </div>
 
+            <h3 style="padding: 0 1rem;">Inclusão Social</h3>
+            <div class="slideshow">
+                <div class="slide"><iframe src="https://www.youtube.com/embed/KILemx1YIiY" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de inclusão social 1"></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/ttEe-vGW2lU" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de inclusão social 2"></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/4rMb1xCnEUY" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de inclusão social 3"></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/8pomCxzsTp8" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de inclusão social 4"></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/yYaZMu9pxWg" frameborder="0" allowfullscreen loading="lazy" title="Vídeo de inclusão social 5"></iframe></div>
+            </div>
+
+
             <h3 style="padding: 0 1rem;"></h3>
             <div class="slideshow">
-                <div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755432354/146535281_232634348530748_8313716109451786477_n._xg7xwk.jpg" alt="Foto de inclusão social" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755432354/146535281_232634348530748_8313716109451786477_n._xg7xwk.jpg" alt="Foto de inclusão social" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755432354/146535281_232634348530748_8313716109451786477_n._xg7xwk.jpg" alt="Foto de inclusão social" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755432354/146535281_232634348530748_8313716109451786477_n._xg7xwk.jpg" alt="Foto de inclusão social" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755432354/146535281_232634348530748_8313716109451786477_n._xg7xwk.jpg" alt="Foto de inclusão social" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755432354/146535281_232634348530748_8313716109451786477_n._xg7xwk.jpg" alt="Foto de inclusão social" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755432354/146535281_232634348530748_8313716109451786477_n._xg7xwk.jpg" alt="Foto de inclusão social" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755432354/146535281_232634348530748_8313716109451786477_n._xg7xwk.jpg" alt="Foto de inclusão social" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755432354/146535281_232634348530748_8313716109451786477_n._xg7xwk.jpg" alt="Foto de inclusão social" width="600" height="400" loading="lazy"></div>
+                <div class="slide active"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1764429006/IMG_20210531_201043388_cvnwin.jpg" alt="Foto de inclusão social" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1764429006/IMG_20210531_201043388_cvnwin.jpg" alt="Foto de inclusão social" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1764429187/Matheus_Costa_27_uhzjzf.jpg" alt="Foto de inclusão social" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1764429186/Matheus_Costa_18_pngrww.jpg" alt="Foto de inclusão social" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1764429187/Matheus_Costa_24_cllfbq.jpg" alt="Foto de inclusão social" width="600" height="400" loading="lazy"></div>
             </div>
 
             <h3 style="padding: 0 1rem;">Defesa Pessoal</h3>
